# conversation-bench

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/skills/consistency-data-issue-review/: SKILL.md
.agents/skills/model-run-error-analysis/: SKILL.md
benchmarks/appointment_bench/: __init__.py  config.py  system.py  tools.py  turns.py
benchmarks/appointment_bench/data/: knowledge_base.txt
benchmarks/assistant_bench/: __init__.py  config.py  system.py  tools.py  turns.py
benchmarks/assistant_bench/data/: knowledge_base.txt
benchmarks/conference_assistant/: __init__.py  config.py  system.py  tools.py  turns.py
benchmarks/conference_assistant/data/: knowledge_base.txt
benchmarks/conversation_bench/: config.py  system.py  turns.py
benchmarks/conversation_bench/data/: knowledge_base.txt
benchmarks/event_bench/: __init__.py  config.py  system.py  tools.py  turns.py
benchmarks/event_bench/data/: knowledge_base.txt
benchmarks/grocery_bench/: __init__.py  config.py  system.py  tools.py  turns.py
benchmarks/grocery_bench/data/: knowledge_base.txt
benchmarks/product_bench/: __init__.py  config.py  system.py  tools.py  turns.py
benchmarks/product_bench/data/: knowledge_base.txt
scripts/: analyze_consistency_runs.py  build_comparison_from_runs.py  build_experiment_review.py  compare_model_runs.py  generate_audio.py  review_streamlit_app.py
src/audio_arena/: __init__.py  cli.py
src/audio_arena/judging/: claude_judge.py  llm_judge.py  openai_judge.py
tests/: test_cli_disable_vad.py  test_turns_multicall_shape.py
(+16 files in other folders)
